[tool.poetry]
name = "Airflow run"
version = "0.1.0"
description = ""
authors = ["Rodrigo Maurino"]
readme = "README.md"

[tool.poetry.dependencies]
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
ipykernel = "^6.17.1"
black = "^22.10.0"
pytest = "^7.2.0"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
